addresses background image bug on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 .App {
   display: flex;
   flex-direction: column;
-  background-image: url("./img/vineyards.webp");
+  background-image: url("./img/backup/vineyards.jpeg"),
+    url("./img/vineyards.webp");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
